Booking card overflow fixed

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -19,6 +19,18 @@
 }
 
 @layer components {
+  .h1{
+    @apply
+    text-2xl font-semibold
+  }
+  .h2 {
+    @apply
+    text-xl font-bold
+  }
+  .h3 {
+    @apply
+    text-lg font-medium 
+  }
 
     .nav-item {
       @apply 
